--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,36 @@
-version: '3.3'
+version: '3.1'
 
 services:
-  bot:
-    image: "${BOT_IMAGE_NAME:-tg_bot-image}"
-    container_name: "${BOT_CONTAINER_NAME:-tg_bot-container}"
-    stop_signal: SIGINT
+  db:
+    container_name: database
+    image: sameersbn/postgresql:10-2
+    env_file:
+       - ".env"
+    environment:
+      PG_PASSWORD: $DB_PASSWORD
+    restart: always
+    ports:
+      - 5432:5432
+    networks:
+      - botnet
+    volumes:
+      - ./postgres:/var/lib/postgresql
+
+  tgbot:
+    container_name: bot
     build:
       context: .
-    working_dir: "/usr/src/app/${BOT_NAME:-tg_bot}"
-    volumes:
-    - .:/usr/src/app/${BOT_NAME:-tg_bot}
-    command: python3 -m bot
+    command: python bot.py
+    networks:
+      - botnet
     restart: always
     env_file:
       - ".env"
-    networks:
-    - tg_bot
-
+    volumes:
+      - .:/src
+    depends_on:
+      - db
 
 networks:
-  tg_bot:
+  botnet:
     driver: bridge
