--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,24 +1,24 @@
 version: "3"
 services:
   bot:
-      build:
-        context: .
-        dockerfile: Dockerfile
+      build: .
       command: >
         sh -c "python bot.py"
-      networks:
-        - web
-      environment:
-        DB_HOST: "postgresql"
-        DB_PORT: "5432"
-        DB_NAME: "gemini_bot"
-        DB_USER: "postgres"
-        PG_PASSWORD: "24651asd"
-        TZ: "Europe/Moscow"
+
+
+      env_file:
+        - ".env"
+#      environment:
+#        DB_HOST: "postgres"
+#        DB_PORT: "5432"
+#        DB_NAME: "gemini_bot"
+#        DB_USER: "postgres"
+#        DB_PASS: "24651asd"
+#        TZ: "Europe/Moscow"
+      restart: always
+
       volumes:
-        - media:/app/media/
-volumes:
-  media:
-networks:
-  web:
-    external: true
+          - .:/src
+      network_mode: "host"
+
+
