--- a/docker-compose.service.yml
+++ b/docker-compose.service.yml
@@ -1,58 +1,64 @@
-version: "3"
+version: "3.9"
 services:
-  postgresql:
-    image: postgres:15.0
-    container_name: postgresql
-
-    env_file:
-      - ".env"
+  postgres:
+    container_name: postgres_container
+    image: postgres:14.8-alpine3.18
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=50"
+      - "-c"
+      - "work_mem=16MB"
+      - "-c"
+      - "random_page_cost=1.1"
+      - "-c"
+      - "log_min_duration_statement=200ms"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10s"
+      - "-c"
+      - "lock_timeout=1s"
+      - "-c"
+      - "statement_timeout=60s"
+      - "-c"
+      - "shared_preload_libraries=pg_stat_statements"
+      - "-c"
+      - "pg_stat_statements.max=10000"
+      - "-c"
+      - "pg_stat_statements.track=all"
     environment:
-        PG_PASSWORD: $PG_PASSWORD
-        PG_USER: postgres
-        POSTGRES_DB: tracking
-        TZ: Europe/Moscow
-
-
-    networks:
-      - web
-    restart: unless-stopped
+      POSTGRES_DB: "gemini_bot"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "24651asd"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - geminidb-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-  traefik:
-    image: traefik:latest
-    container_name: traefik
-    restart: unless-stopped
-    networks:
-      - web
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=web"
-      - "traefik.http.routers.traefik.service=traefik"
-      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
-      - "traefik.http.routers.traefik.rule=Host(`traefik.localhost`)"
-    command: --api.insecure=true --providers.docker
+
   pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
+    container_name: pgadmin_container
+    image: dpage/pgadmin4:7.2
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=web"
-      - "traefik.http.routers.pgadmin.rule=Host(`pgadmin.localhost`)"
-      - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
-    networks:
-      - web
+      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+      PGADMIN_DEFAULT_PASSWORD: "24651asd"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    ports:
+      - "5050:80"
     restart: unless-stopped
-    depends_on:
-      - traefik
-      - postgresql
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1G
+    networks:
+      - postgres
+
+volumes:
+  geminidb-data:
+  pgadmin-data:
+
 networks:
-  web:
-    external: true
+  postgres:
+    driver: bridge
