--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     env_file:
        - ".env"
     environment:
-      PG_PASSWORD: $DB_PASSWORD
+      DB_PASS: $DB_PASS
     restart: always
     ports:
       - 5432:5432
