--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,19 +6,19 @@ services:
         sh -c "python bot.py"
 
 
-      env_file:
-        - ".env"
-#      environment:
-#        DB_HOST: "postgres"
-#        DB_PORT: "5432"
-#        DB_NAME: "gemini_bot"
-#        DB_USER: "postgres"
-#        DB_PASS: "24651asd"
-#        TZ: "Europe/Moscow"
+
+      environment:
+        DB_HOST: "postgres"
+        DB_PORT: "5432"
+        DB_NAME: "gemini_bot"
+        DB_USER: "postgres"
+        DB_PASS: "24651asd"
       restart: always
 
       volumes:
           - .:/src
-      network_mode: "host"
 
 
+networks:
+  postgres:
+    driver: bridge
